Added styling to  Section 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html>
+<!--[if IE 7 ]><html lang="en-gb" class="isie ie7 oldie no-js"><![endif]-->
+<!--[if IE 8 ]><html lang="en-gb" class="isie ie8 oldie no-js"><![endif]-->
+<!--[if IE 9 ]><html lang="en-gb" class="isie ie9 no-js"><![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html lang="en-gb" class="no-js"><!--<![endif]-->
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1" />
-  <meta charset="utf-8" />
-  <title>Hashedin Web template</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="favicon.ico" />
-  <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <title>HashedIn Technologies Pvt. Ltd.</title>
+
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Favicon -->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?famil<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300,600' rel='stylesheet' type='text/css'>y=Open+Sans" rel="stylesheet" type="text/css">
+  <link href="styles/app.css" rel="stylesheet" type="text/css">
+  <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
@@ -24,11 +36,45 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div class="container">
-    <div class="jumbotron">
-      <h2 class="text-center">Hello World</h2>
+  <div class="section1">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <img class="logo pull-left" src="img/all_icons/hashedin_logo_white.png">
+        <ul class="nav navbar-nav navbar-default navbar-link pull-right">
+          <li><a href="About.html">About</a></li>
+          <li><a href="Services.html">Services</a></li>
+          <li><a href="">Case Studies</a></li>
+          <li><a href="">Our Approach</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="Careers.html">Careers</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+      <div class="container-fluid jumbotron">
+        <h1 class="jumbotron light-style">We are<span class="jumbotron bold-style"><strong>TECHNOPHILES CURIOUS & INNOVATIVE OUTSOURCING EXPERTS</strong></span></h1>
+      </div> 
+      <div class="text-center">
+        <a href=""><u><h3>read more</h3></u></a>
+      </div>
     </div>
   </div>
+<div class="section2">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4 section2 col">
+        <h1 class="section2 col col1"><strong>WE WORK FOR</strong></h1>
+      </div>
+      <div class="col-md-4 section2 col">
+        <h1 class="section2 col col2">Enterprises</h1>
+      </div>
+      <div class="col-md-4 section2 col">
+        <h1 class="section2 col col3">Startups</h1>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
