Contents of section-2 are added, extra stylings removed, indentations fixed

--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,12 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <section class="section1">
+  <section class="section1-bg">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
-        <div class="navbar-brand">
-          <a><img class="logo pull-left" src="img/all_icons/hashedin_logo_white.png"></a></div>
+        <div class="navbar-header">
+          <a><img src="img/all_icons/hashedin_logo_white.png"></a>
+        </div>
         <ul class="nav navbar-nav navbar-default navbar-link pull-right">
           <li><a href="About.html">About</a></li>
           <li><a href="Services.html">Services</a></li>
@@ -57,24 +58,22 @@
       </div>
     </div>
   </section>
-<section class="we-work-for">
-<!--  <div class="container">-->
-    <div class="row margin">
+  <section class="section2">
+    <div class="row section2-header ">
       <div class="col-md-4 work-for">
-          <span class="style">WE <strong>WORK FOR</strong></span>
-        </div>
+        <span class="header-message">WE <strong>WORK FOR</strong></span>
+      </div>
       <div class="col-md-4 enterprise">
-<!--        <div class="col">-->
-        <h1 class="style"><strong>Enterprises</strong></h1>
-<!--      </div>-->
+        <h1 class="header-message"><strong>Enterprises</strong></h1>
       </div>
       <div class="col-md-4 startups">
-        <h1 class="style"><strong>Startups</strong></h1>
+        <h1 class="header-message"><strong>Startups</strong></h1>
       </div>
     </div>
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="work-for-heading">We are <b class="work-for-heading-color">full-stack services</b> company</h1></div>
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="hi-section2-title"><span class="">We are <b class="hi-header-color">full-stack services</b></span> company</h1>
+      </div>
       <ul class="list-inline">
         <li>Design</li>
         <li class="glyphicon glyphicon-plus"></li>
@@ -86,17 +85,33 @@
         <li class="glyphicon glyphicon-plus"></li>
         <li>Deployment</li>
       </ul>
-      <div class="work-for-subheading">
+      <div class="section2-subheading">
         <ul class="list-inline">
           <li><img src="img/all_icons/design_icon.png"></li>
           <li class="glyphicon glyphicon-plus"></li>
           <li><img src="img/all_icons/development_icon.png"></li>
           <li class="glyphicon glyphicon-plus"></li>
           <li><img src="img/all_icons/deployment_icon.png"> </li>
-    </ul>
+        </ul>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+  <section class="section3">
+    <div class="container-fluid">
+      <div>
+        <h1 class="hi-header"><strong class="hi-header-color">Technologies</strong> We work with</h1>
+      </div>
+    </div>
+  </section>
+  <section class="section4">
+    <div class="hi-header">
+      <h1>Our <strong class="hi-header-color">Clients</strong></h1>
+    </div>
+  </section>
+  <section>
+    <div>
+    </div>
+  </section>
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="libs/jquery/dist/jquery.js"></script>
