Contents added to section-4

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
+  
+  
+<!-- Section-1 -->
   <section class="section1-bg">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
@@ -58,8 +60,11 @@
       </div>
     </div>
   </section>
+  
+  
+  <!-- Section-2 -->
   <section class="section2">
-    <div class="row section2-header ">
+    <div class="row">
       <div class="col-md-4 work-for">
         <span class="header-message">WE <strong>WORK FOR</strong></span>
       </div>
@@ -96,6 +101,9 @@
       </div>
     </div>
   </section>
+  
+  
+  <!-- Section-3 -->
   <section class="section3">
     <div class="container-fluid">
       <div>
@@ -103,12 +111,29 @@
       </div>
     </div>
   </section>
+  
+  
+  <!-- Section-4 -->
   <section class="section4">
-    <div class="hi-header">
-      <h1>Our <strong class="hi-header-color">Clients</strong></h1>
+    <h1 class="hi-header">Our <strong class="hi-header-color">Clients</strong></h1>
+    <div class="hi-clients">
+      <ul class="list-inline hi-clients-nowrap">
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/Ford_logo_grey.png"</li>
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/intute_logo_grey.png"</li>
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/FusionCharts_Logo_greay.png"</li> 
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/winzip_logo_grey.png"</li>
+      </ul>
+      <ul class="list-inline hi-clients-nowrap">
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/comcast_logo_grey.png"</li>
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/atlasian_logo_grey.png"</li>
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/blue_hornet_logo_grey.png"</li>
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/lithium_logo_greay.png"</li>
+      </ul>
     </div>
   </section>
-  <section>
+   
+  <!-- Section-5 -->
+  <section class="section5">
     <div>
     </div>
   </section>
