Contents added to section 5,Made responsive to tablets,technology image is compressed

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet" type="text/css" />
-  <link href="http://fonts.googleapis.com/css?famil<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300,600' rel='stylesheet' type='text/css'>y=Open+Sans" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300,600' rel='stylesheet' type='text/css'>
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
@@ -33,13 +33,13 @@
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  
-  
+
+
 <!-- Section-1 -->
   <section class="section1-bg">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
-        <div class="navbar-header">
+        <div class="navbar-brand">
           <a><img src="img/all_icons/hashedin_logo_white.png"></a>
         </div>
         <ul class="nav navbar-nav navbar-default navbar-link pull-right">
@@ -53,20 +53,21 @@
         </ul>
       </div>
       <div class="container-fluid jumbotron">
-        <h1 class="jumbotron light-style">We are<span class="jumbotron bold-style"><strong>TECHNOPHILES CURIOUS & INNOVATIVE OUTSOURCING EXPERTS</strong></span></h1>
-      </div> 
+        <h1 class="jumbotron light-style">We are<span class="jumbotron bold-style"><strong>TECHNOPHILES CURIOUS & INNOVATIVE OUTSOURCING EXPERTS</strong></span>
+        </h1>
+      </div>
       <div class="text-center">
         <a href=""><u><h3>read more</h3></u></a>
       </div>
     </div>
   </section>
-  
-  
+
+
   <!-- Section-2 -->
   <section class="section2">
     <div class="row">
-      <div class="col-md-4 work-for">
-        <span class="header-message">WE <strong>WORK FOR</strong></span>
+      <div class="col-md-4 work-for header-message">
+        WE <strong>WORK FOR</strong>
       </div>
       <div class="col-md-4 enterprise">
         <h1 class="header-message"><strong>Enterprises</strong></h1>
@@ -77,7 +78,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h1 class="hi-section2-title"><span class="">We are <b class="hi-header-color">full-stack services</b></span> company</h1>
+        <h1 class="hi-section2-title"><span class="">We are <b class="hi-header-success">full-stack services</b></span> company</h1>
       </div>
       <ul class="list-inline">
         <li>Design</li>
@@ -101,26 +102,25 @@
       </div>
     </div>
   </section>
-  
-  
+
+
   <!-- Section-3 -->
   <section class="section3">
     <div class="container-fluid">
       <div>
-        <h1 class="hi-header"><strong class="hi-header-color">Technologies</strong> We work with</h1>
+        <h1 class="hi-header"><strong class="hi-header-success">Technologies</strong> <span class="hi-header-primary">We work with</span></h1>
       </div>
     </div>
   </section>
-  
-  
-  <!-- Section-4 -->
+
+  <!----- Section-4 ----->
   <section class="section4">
-    <h1 class="hi-header">Our <strong class="hi-header-color">Clients</strong></h1>
+    <h1 class="hi-header">Our <strong class="hi-header-success">Clients</strong></h1>
     <div class="hi-clients">
       <ul class="list-inline hi-clients-nowrap">
         <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/Ford_logo_grey.png"</li>
         <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/intute_logo_grey.png"</li>
-        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/FusionCharts_Logo_greay.png"</li> 
+        <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/FusionCharts_Logo_greay.png"</li>
         <li class="img-thumbnail hi-client-icons"><img src="img/all_icons/winzip_logo_grey.png"</li>
       </ul>
       <ul class="list-inline hi-clients-nowrap">
@@ -131,10 +131,34 @@
       </ul>
     </div>
   </section>
-   
+
   <!-- Section-5 -->
   <section class="section5">
-    <div>
+    <div class="row">
+    <div class="col-md-6 section5-layer">
+      <div class="section5-container">
+        <h1 class="hi-header hi-header-primary">Our recent <strong>Works</strong></h1>
+        <h2 class="section5-title hi-header-primary">Case</h2>
+        <h2 class="hi-header-primary"><strong>Hiway Employee Management</strong></h2>
+        <h2><strong>Android / iOS / UX</strong></h2>
+        <div class="icon glyphicon glyphicon-option-horizontal">
+        </div>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sem risus, aliquet nec laoreet vel, convallis quis tellus. In lacinia sem non dui venenatis, quis cursus lacus molestie. Nam vestibulum metus leo, et porta enim tempus at. Sed non blandit lacus, ac iaculis dui.
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="section5-tablet-image">
+        <img src="img/Tablet.png">
+      </div>
+      <div class="section5-hand-image">
+        <img src="img/hand.png">
+      </div>
+    </div>
+    </div>
+    <div class="action-icon">
+      <div class="icon glyphicon glyphicon-chevron-up"></div>
+      <div class="icon glyphicon glyphicon-chevron-down"></div>
     </div>
   </section>
   <!-- build:js scripts/vendor.js -->
